@@ -7,8 +7,9 @@ Changelog for Poi
 Poi 1.2 - (Unreleased)
 ----------------------
 
-- Memoize getTaggedResponse; clear it when setting the response field.
-  This speeds up viewing an issue.
+- Memoize the getTagged* values for intelligenttext fields in PoiIssue
+  and PoiResponse; clear them when setting those fields.  This speeds
+  up viewing an issue or response.
   [maurits]
 
 - Modernize code:
